# Sotpal

./: Cargo.toml  README.md
.github/workflows/: rust.yml
secrets/: token
src/: integrations.rs  main.rs  sotpal.rs  utils.rs
src/integrations/: telegram.rs  terminal.rs
src/integrations/telegram/: utils.rs
src/sotpal/: player.rs
