[package]
name = "sotpal_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1.20.1", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
rand = "0.8.5"
indexmap = "1.9.1"
telegram-bot = "0.8.0"
futures = "0.3"

[features]
terminal = []
telegram = []